--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -1,26 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ufK-4r-2Cp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.21649848090000001" blue="0.22566731770000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="Jj7-Hi-sLw"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="qFm-e0-07H">
+                                <rect key="frame" x="0.0" y="65" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="u6v-SX-xH7"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4vR-7u-Myf">
+                                <rect key="frame" x="0.0" y="109" width="414" height="627"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ufK-4r-2Cp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4Sy-j3-n4A"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4vR-7u-Myf" secondAttribute="bottom" id="IwZ-zc-2NX"/>
+                            <constraint firstAttribute="trailing" secondItem="qFm-e0-07H" secondAttribute="trailing" id="SoS-Wd-gWN"/>
+                            <constraint firstItem="qFm-e0-07H" firstAttribute="top" secondItem="ufK-4r-2Cp" secondAttribute="bottom" id="gPe-W9-R2b"/>
+                            <constraint firstItem="qFm-e0-07H" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="n8L-nY-hI2"/>
+                            <constraint firstItem="ufK-4r-2Cp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="nH3-98-aj9"/>
+                            <constraint firstAttribute="trailing" secondItem="ufK-4r-2Cp" secondAttribute="trailing" id="ntT-qq-ZFr"/>
+                            <constraint firstItem="4vR-7u-Myf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="s8u-x3-eEx"/>
+                            <constraint firstAttribute="trailing" secondItem="4vR-7u-Myf" secondAttribute="trailing" id="sah-uR-bPc"/>
+                            <constraint firstItem="4vR-7u-Myf" firstAttribute="top" secondItem="qFm-e0-07H" secondAttribute="bottom" id="uyO-m0-csn"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
